[project]
name = "util-scripts"
version = "1.0.0"
description = "A collection of (currently only ffmpeg) scripts with a nice GUI."
requires-python = ">= 3.14"
dependencies = [
  "ffmpeg-normalize",
  "fontra",
  "nicegui",
  "pydantic",
  "pydantic-extra-types",
  "pytimeparse2",
  "pywebview",
  "typed-ffmpeg",
]

[project.scripts]
util-scripts = "util_scripts.__main__:main"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"
